# ros2_always_reader

./: README.md  package.xml  setup.cfg  setup.py
ros2_always_reader/: __init__.py  info_from_bag.py  read_bag.py
ros2_always_reader/mcap_schema/: build_ros2_schema_text.py  coerce_dynamic_mcap_msg_to_ros2_msg.py  get_type_string_from_class.py
test/: test_coerce_dynamic_mcap_msg_to_ros2_msg.py  test_read_bag_unknown.py  test_read_round_trip.py
test/bag_with_unknown_msgs/: bag_with_unknown_msgs_0.mcap  metadata.yaml  msg_schema.txt
