<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_always_reader</name>
  <version>0.0.0</version>
  <description>Reader-only utilities for ROS2 bags with direct deserialization</description>
  <maintainer email="dominik.fletschinger@anavs.de">anavs</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>rosbag2_compression_zstd</depend>
  <depend>rosbag2_storage_default_plugins</depend>
  <depend>rosbag2_storage_mcap</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
